fixed alignment of project image

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -7,6 +7,12 @@
   box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
 }
 
+.project-image-link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .project-image {
   width: 40vw;
   padding: 10px;
